<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    >





    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/was_cars"
        android:textColor="#FFF3F3F3"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/car_make"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="355dp"
        android:text="@string/car_make"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="#1E376A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/hint"
        android:layout_width="193dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="20dp"
        android:text="HINTS"
        android:textSize="15sp"
        app:backgroundTint="#1E376A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toEndOf="@+id/car_make"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/car_image"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/car_image"
        android:textSize="15sp"
        app:backgroundTint="#1E376A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_make"
        app:layout_constraintVertical_bias="0.0"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/advaned"
        android:layout_width="192dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="113dp"
        android:text="ADVANCED LEVEL"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="#1E376A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/car_image"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

</androidx.constraintlayout.widget.ConstraintLayout>